# dweb_proxy

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
certs/: cert.pem  create-ca.sh  create-cert.sh  dh.pem  key.pem  myCA.key  myCA.pem  server.test.crt  server.test.csr  server.test.key
scripts/: create-ca.sh  create-server-cert.sh
src/: AutoDiscovery.cpp  CMakeLists.txt  main.cpp  request_handler.cpp  server.cc  server.cpp
src/include/: AutoDiscovery.hpp  logger.hpp  request_handler.hpp  server.hpp
tests/: CMakeLists.txt
